--- a/index.html
+++ b/index.html
@@ -190,6 +190,21 @@
         </div>
     </div>
 
+    <div class="code">
+        <h3>Common way of Responsive Scaling of Images</h3>
+        .container {
+          width: 50%;
+          height: 200px;
+          overflow: hidden;
+        }
+        
+        .container img {
+          max-width: 100%;
+          height: auto;
+          display: block;
+        }
+    </div>
+
     <!-- Add your scripts or additional content here -->
 
 </body>
