--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
 
     <div class="code">
         <h3>Common way of Responsive Scaling of Images</h3>
-        .container {
-          width: 50%;
-          height: 200px;
-          overflow: hidden;
-        }
+        <span>.container {</span>
+          <span>width: 50%;</span>
+          <span>height: 200px;</span>
+          <span>overflow: hidden;</span>
+        <span>}</span>
         
-        .container img {
-          max-width: 100%;
-          height: auto;
-          display: block;
-        }
+        <span>.container img {</span>
+          <span>max-width: 100%;</span>
+          <span>height: auto;</span>
+          <span>display: block;</span>
+        <span>}</span>
     </div>
 
     <!-- Add your scripts or additional content here -->
